=========
Build: 1.16.4-Alpha 5.2 / Beta 1.2
	+ Fixed Mana Monocle recipe not being craftable at it's intended unlock tier
	+ All crops now have valid ground configurable via tags, however only wakebloom can be placed directly on fluids
	+ More spellbook tooltip improvements, apparently they just dont like normal java String syntax
=========
Build: 1.16.4-Alpha 5.1 / Beta 1.1
	+ Fixed a crash on servers due to the mana monocle because I guess it wasnt really ready for a release.
=========
Build: 1.16.4-Alpha 5 / Beta 1
	* Released as Beta just because curseforge doesnt like alpha mods
	+ Mana Monocle, curio equippable in head slot, displays numerical mana values in a HUD element
	+ Mana Monocle manaweaving recipe, included under artifice tab of codex
	+ Command: /afuicfg, for now all it does is take x and y values to move the mana monocle hud element
	+ Config File currently just stores position of mana monocle hud element
=========
Build: 1.16.4-Alpha 4
	+ Vinteum Powder, vinteum dust compression block; effectively blue sand
	+ Better logic for spellbook tooltips
=========
Build: 1.16.4-Alpha 3
	+ Spellbook usage tooltip details updated
	+ Desert Nova and Wakebloom crops valid soil now configurable with tags
=========
Build: 1.16.4-Alpha 2
	+ Ritual of Unspelling: uncrafts spells
	+ Guidebook entries
	+ Implemented tags
	+ Added usage tips to spellbook tooltips
=========
Build: 1.16.4-Alpha 1
	Initial release: flower crops and some utility recipes