@@ -30,30 +30,16 @@ public class TooltipHandler {
 		
 		if (hoveredItem.getItem() == checkSpellBook || hoveredItem.getItem() == checkGrimoire || hoveredItem.getItem() == checkRoteBook) {
 			
-			addSpellBookInformation(hoveredItem, checkRoteBook, event.getToolTip());	
+			addSpellBookInformation(hoveredItem, event.getToolTip());	
 		}
 	}
 	
-	public static void addSpellBookInformation(ItemStack stack, Item roteBook, List<ITextComponent> tooltip) {
+	public static void addSpellBookInformation(ItemStack stack, List<ITextComponent> tooltip) {
 		
-		if (!KeyboardUtil.isCtrl()) {
+		/*if (!KeyboardUtil.isCtrl()) {
         	tooltip.add(new TranslationTextComponent("tooltip.allbooksintro").mergeStyle(TextFormatting.AQUA));
-        }
-		if (KeyboardUtil.isCtrl()) {
-			if (!(stack.getItem() == roteBook)) {
-				tooltip.add(new TranslationTextComponent("tooltip.standard_cast").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.spellbook1").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.spellbook2").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.keybind", KeyboardUtil.getSpellKey()).mergeStyle(TextFormatting.AQUA));
-			}
-			else {
-				tooltip.add(new TranslationTextComponent("tooltip.standard_cast").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.rotebook1").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.rotebook2").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.rotebook3").mergeStyle(TextFormatting.AQUA));
-				tooltip.add(new TranslationTextComponent("tooltip.keybind", KeyboardUtil.getSpellKey()).mergeStyle(TextFormatting.AQUA));
-			}
-		}	
+        }*/
+		tooltip.add(new TranslationTextComponent("tooltip.keybind", KeyboardUtil.getSpellKey()).mergeStyle(TextFormatting.AQUA));
 	}
 }
 
