@@ -1,6 +1,0 @@
-package com.Spoilers.arcanefundamentals.util;
-
-public class SpellDataUtil {
-	
-	//public static 
-}
