@@ -5,7 +5,7 @@
     "sections": [
 	  {
        	"type": "title",
-		"value": "Flower Seeds"
+		"value": "[AF]Flower Seeds"
       },
       {
        	"type": "text",
@@ -54,11 +54,11 @@
     "sections": [
       {
         "type": "title",
-        "value": "Ritual of Unspelling"
+        "value": "[AF]Ritual of Unspelling"
       },
       {
         "type": "text",
-        "value": "Through a bit of tinkering, you have discovered that, by inverting the rune pattern of the Ritual of Arcana, you can destabilize a spell enough to cause it to collapse back into it's mundane components."
+        "value": "Through a bit of tinkering, you have discovered that, by inverting the rune pattern of the Ritual of Arcana, you can destabilize a spell enough to cause it to collapse back into it's mundane components. Complexity foci are lost."
       },
       {
 		"type": "image",
@@ -81,7 +81,7 @@
     "sections": [
       {
     	"type": "title",
-        "value": "Recycling Botched Plates"
+        "value": "[AF]Recycling Botched Plates"
       },
       {
         "type": "text",
@@ -105,7 +105,7 @@
     "sections": [
       {
         "type": "title",
-        "value": "Mana Monocle"
+        "value": "[AF]Mana Monocle"
       },
       {
         "type": "text",
