@@ -1,0 +1,6 @@
+{
+  "replace": false,
+  "values": [
+    "arcanefundamentals:desert_nova_seed"
+  ]
+}
